Source/WebCore/bindings/scripts/CodeGeneratorJS.pm
@@ -1223,8 +1223,11 @@ sub GenerateAttributesHashTable($$)
         push(@hashKeys, $name);
 
         my @specials = ();
-        push(@specials, "DontDelete") unless $attribute->signature->extendedAttributes->{"Deletable"};
-        push(@specials, "DontEnum") if $attribute->signature->extendedAttributes->{"NotEnumerable"};
+        # As per Web IDL specification, constructor properties on the ECMAScript global object should be
+        # configurable and should not be enumerable.
+        my $is_domwindow_constructor = ($interface->name eq "DOMWindow" && $attribute->signature->type =~ /Constructor$/);
+        push(@specials, "DontDelete") unless ($attribute->signature->extendedAttributes->{"Deletable"} || $is_domwindow_constructor);
+        push(@specials, "DontEnum") if ($attribute->signature->extendedAttributes->{"NotEnumerable"} || $is_domwindow_constructor);
         push(@specials, "ReadOnly") if IsReadonly($attribute);
         my $special = (@specials > 0) ? join(" | ", @specials) : "0";
         push(@hashSpecials, $special);
